Fixed alignment for icons

--- a/src/main/resources/Calendar/MainUI.css
+++ b/src/main/resources/Calendar/MainUI.css
@@ -1,5 +1,4 @@
 .icon-container Label {
      -fx-font-family: 'FontAwesome Regular';
-     -fx-padding: 10 0 10 20;
      -fx-font-size: 50px;
 }
